[gd_scene load_steps=3 format=3 uid="uid://cnacrilopgdtg"]

[ext_resource type="Script" path="res://scripts/module.gd" id="1_akvgs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_138wk"]
size = Vector2(200, 200)

[node name="Module" type="CharacterBody2D"]
input_pickable = true
motion_mode = 1
script = ExtResource("1_akvgs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(100, 100.25)
shape = SubResource("RectangleShape2D_138wk")

[node name="Background" type="ColorRect" parent="."]
offset_right = 204.0
offset_bottom = 202.0
mouse_filter = 1

[connection signal="entered_voicebox" from="." to="." method="_on_entered_voicebox"]
[connection signal="exited_voicebox" from="." to="." method="_on_exited_voicebox"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
